Fix JOOQ Java9 invocation and add support for using mysql-socket-factory with flyway / jooq. (#48)